[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pd-utils"
version = "1.3.1"
requires-python = ">=3.8"
description = "Utility scripts for PagerDuty instance administration and reporting."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { email = "preocts@preocts.com", name = "Preocts" }
]
maintainers = []
keywords = []
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython"
]
dependencies = [
    "httpx>=0.23.0,<1",
    "runtime-yolk>=1.0.0,<2",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
    "mypy",
    "flake8",
    "flake8-builtins",
    "flake8-pep585",
]
test = [
    "pytest",
    "pytest-randomly",
    "coverage",
    "tox"
]

[project.urls]
homepage = "https://github.com/Preocts/pd-utils"
# documentation = ""
# repository = ""
# changelog = ""

# CLI scripts if needed
[project.scripts]
coverage-gap-report = "pd_utils.cli.coverage_gap_report_cli:main"
safelist-gatherer = "pd_utils.report.safelist_gatherer:console_output"
simple-alert = "pd_utils.tool.simple_alert:console_handler"
close-old-incidents = "pd_utils.cli.close_old_incidents_cli:main"
user-report = "pd_utils.cli.user_report_cli:main"

[tool.setuptools.package-data]
"pd_utils" = ["py.typed"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_incomplete_defs = false
disallow_untyped_defs = false

[tool.coverage.run]
branch = true
source = [
    "tests",
]
source_pkgs = [
    "pd_utils",
]

[tool.coverage.paths]
source = [
    "src/",
    "*/site-packages",
]
test = [
    "tests/",
    "*/tests",
]

[tool.coverage.report]
exclude_lines =[
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]

# This is ignored by flake8, here in case they decide to add it in the future
[tool.flake8]
ignore = "W503,E203"
max-line-length = 88

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38,py39,py310,py311,coverage,pre-commit
skip_missing_interpreters = true
isolated_build = True

[testenv]
deps = .[test]
commands =
    coverage run -p -m pytest tests/

[testenv:coverage]
depends = py38,py39,py310,py311
parallel_show_output = true
commands =
    python -m coverage combine
    python -m coverage report -m --fail-under=50
    python -m coverage json

[testenv:pre-commit]
depends = coverage
parallel_show_output = true
skip_install = true
deps = pre-commit
commands = pre-commit run --all-files --show-diff-on-failure
"""
